fixed spacing for name on left side of nav bar

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -12,6 +12,11 @@
     max-width: 1440px;
     margin: 0 auto;
 }
+
+.nav-bar h4 {
+    color: white;
+    margin: 0px 0px 0px 20px;
+}
     
 .nav-bar ul {
     display: flex;
